add crypto mode using async api call

--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 
     gtag('config', 'UA-109094292-2');
   </script>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-2096468444548622",
-      enable_page_level_ads: true
-    });
-  </script>
+  <script src="./cryptoAPI.js"></script>
   <title>DOTTY</title>
   <link rel="stylesheet" href="./styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
